# fuzz-introspector

./: .gitignore  .gitmodules  .pylintrc  .readthedocs.yaml  Dockerfile  LICENSE  README.md  SECURITY-INSIGHTS.yml  SECURITY.md  api_test.sh  build_all.sh  ci_checks.sh  code_checks.sh  llvm_diff.patch  rebuild_pass.sh  requirements.txt  sed_cmds.sh  style_check.sh
doc/: CHARTER.md  (+10 more)
frontends/rust/rust_function_analyser/: Cargo.toml
frontends/rust/rust_function_analyser/src/: analyse.rs  call_tree.rs  generate_yaml.rs  main.rs
src/: .gitignore  MANIFEST.in  README.md  main.py  pyproject.toml  setup.py
src/fuzz/: README.md  fuzz_cfg_load.py
src/fuzz_introspector/: .gitignore  analysis.py  cfg_load.py  cli.py  code_coverage.py  commands.py  constants.py  cov_load.py  data_loader.py  debug_info.py  diff_report.py  html_constants.py  html_helpers.py  html_report.py  json_report.py  run_for_dir.sh  utils.py
src/fuzz_introspector/analyses/: .sink_function  __init__.py  annotated_cfg.py  bug_digestor.py  calltree_analysis.py  driver_synthesizer.py  engine_input.py  far_reach_low_coverage_analyser.py  filepath_analyser.py  frontend_analyser.py  function_call_analyser.py  metadata.py  optimal_targets.py  public_candidate_analyser.py  runtime_coverage_analysis.py  sinks_analyser.py  source_code_line_analyser.py  test_analyser.py  test_file_analyser.py
src/fuzz_introspector/analyses/data/: cwe_data.py
src/fuzz_introspector/datatypes/: branch_profile.py  bug.py  function_profile.py  fuzzer_profile.py  project_profile.py
src/fuzz_introspector/frontends/: .gitignore  core.py  datatypes.py  frontend_c.py  frontend_c_cpp.py  frontend_cpp.py  frontend_go.py  frontend_jvm.py  frontend_rust.py  install-deps.sh  oss_fuzz.py
src/fuzz_introspector/frontends/src/: .gitignore  frontend_c.py  frontend_cpp.py  frontend_go.py  main.py  oss_fuzz.py
src/fuzz_introspector/styling/: __init__.py  calltree.js  custom.js  styles.css
src/test/: test_branch_profile.py  test_bug.py  test_cfg_load.py  test_code_coverage.py  test_frontends_c.py  test_frontends_cpp.py  test_frontends_go.py  test_frontends_jvm.py  test_frontends_rust.py  test_frontends_unicode.py  test_fuzz_cfg_load.py  test_fuzz_report_generation.py  test_fuzzer_profile.py  test_html_generation.py  test_jvm_report_generation.py  test_tree_sitter_frontend.py  test_url.py  test_util.py  test_utils.py
src/test/data/: reached_func.covreport  sample_cov.covreport
src/test/data/TestReport/: config.properties
src/test/data/TestReport/test1/: fuzzerLogFile-fuzz_test.data.yaml
src/test/data/TestReport/test2/: fuzzerLogFile-fuzz_test.data
src/test/data/source-code/cpp/test-project-2/: recursive.cpp  sample.h
src/test/data/source-code/cpp/test-project-3/: deep_chain.cpp  deep_chain.hpp
src/test/data/source-code/cpp/test-project-4/: deep_nested.cc
src/test/data/source-code/cpp/test-project-5/: test.cpp  test.hpp
src/test/data/source-code/cpp/test-project-6/: sample.cpp
src/test/data/source-code/cpp/test-project-7/: sample.h  sample1.cpp  sample2.cpp
src/test/data/source-code/cpp/unicode-error/: simple.cpp
src/test/data/source-code/go/test-project-1/: fuzzer.go
src/test/data/source-code/go/test-project-2/: fuzzer.go
src/test/data/source-code/go/test-project-3/: fuzzer.go
src/test/data/source-code/go/test-project-4/: fuzzer.go
src/test/data/source-code/go/test-project-5/: fuzzer.go
src/test/data/source-code/go/test-project-6/: fuzzer.go
src/test/data/source-code/go/test-project-7/: fuzzer.go
src/test/data/source-code/go/test-project-8/: fuzzer.go
src/test/data/source-code/go/test-project-9/: fuzzer_one.go  fuzzer_two.go  others.go
src/test/data/source-code/go/unicode-error/: simple.go
src/test/data/source-code/jvm/test-project-1/: Fuzzer.java
src/test/data/source-code/jvm/test-project-3/: Fuzzer.java
src/test/data/source-code/jvm/unicode-error/: simple.java
src/test/data/source-code/rust/test-project-1/: fuzzer.rs
src/test/data/source-code/rust/test-project-2/: fuzzer.rs  math.rs
src/test/fuzz/: .gitignore  fuzz_cfg_load.py  fuzz_report_generation.py  test_fuzz_cfg_load.py  test_fuzz_cov_load.py  test_fuzz_report_generation.py
src/test/tree-sitter-frontend/cpp/test-project-2/: crossfile.cpp  fuzzer.cpp
src/test/tree-sitter-frontend/cpp/test-project-4/: deep_nested.cc
src/test/tree-sitter-frontend/cpp/test-project-5/: test.hpp
(+562 files in other folders)
