[package]
name = "rust_function_analyser"
version = "0.1.0"
edition = "2021"

[dependencies]
syn = { version = "2.0", features = ["full", "visit"] }
quote = "1.0"
walkdir = "2.4"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
proc-macro2 = { version = "1.0", features = ["span-locations"] }
