[package]
name = "rust_function_analyser"
version = "0.1.0"
edition = "2021"

[dependencies]
proc-macro2 = { version = "1.0", features = ["span-locations"] }
syn = { version = "2.0", features = ["full", "visit"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0" 
serde_yaml = "0.9"
quote = "1.0"
walkdir = "2.4"
